I added on the 100vh again to correct it. Give it time to update so i can make sure the overflow hidden wont fix my issue.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -87,7 +87,6 @@ body {
 @media screen and (max-width: 390px) {
   .background {
     background-position: center;
-    background-size: 98vh;
   }
   
   .intro {
